istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: flask-app-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - flask-app-gateway
  http:
    - route:
        - destination:
            host: flask-app-service
            subset: v1
          weight: 80
        - destination:
            host: flask-app-service
            subset: v2
          weight: 20
